@@ -44,6 +44,7 @@ struct ast_format;
 #define AST_MAX_FORMATS 10
 
 /*! Convenient for waiting */
+#define AST_DIGIT_NONE ""
 #define AST_DIGIT_ANY "0123456789#*ABCD"
 #define AST_DIGIT_ANYNUM "0123456789"
 
